--- a/style.css
+++ b/style.css
@@ -986,10 +986,12 @@ mask-image: linear-gradient(to top, transparent 40%, #079097 80%) !important;
 }
 
 .love-text {
-  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-size: 40px;
-  color: pink;
-  margin-top: 50px;
-  opacity: 0;
-  transition: opacity 2s ease;
+  color: white;
+  z-index: 9999;
+}
 }
