--- a/style.css
+++ b/style.css
@@ -986,14 +986,11 @@ mask-image: linear-gradient(to top, transparent 40%, #079097 80%) !important;
 }
 
 .message-section {
+  position: absolute;
+  bottom: 40px;
   width: 100%;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   text-align: center;
-  background: blue;
-  padding: 20px;
+  pointer-events: none;
 }
 
 .message-section h1 {
