--- a/style.css
+++ b/style.css
@@ -11,13 +11,11 @@
 }
 
 body {
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
   min-height: 100vh;
   background-color: var(--dark-color);
   overflow: hidden;
   perspective: 1000px;
+  position:relative;
 }
 
 .night {
